<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login.view.LoginView"
    android:background="@color/grey">

    <RelativeLayout
        android:layout_width="@dimen/linear_layout_width"
        android:layout_height="@dimen/linear_layout_height"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.202"
        android:padding="@dimen/relative_layout_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/text_view_title_margin_top"
                android:text="@string/text_view_title_login_user"
                android:textSize="@dimen/text_view_title_text_size"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                style="@style/style_text_login_view">
            </TextView>

            <EditText
                android:id="@+id/edit_text_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/style_text_login_view"
                android:layout_marginTop="@dimen/edit_text_username_margin_top"
                android:hint="@string/edit_text_username_login"
                android:textSize="@dimen/edit_text_username_password_text_size"/>

            <EditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/edit_text_password_margin_top"
                android:hint="@string/edit_text_password_login"
                style="@style/style_text_login_view"
                android:textSize="@dimen/edit_text_username_password_text_size"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_login"
                android:text="@string/button_login_user"
                style="@style/style_text_login_view"
                android:layout_marginTop="@dimen/button_login_margin_top">
            </Button>




                <TextView
                    android:id="@+id/text_view_link_to_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    style="@style/style_text_login_view"
                    android:linksClickable="true"
                    android:text="@string/text_view_link_create_account"
                    android:textColor="@color/purple_700"
                    android:textColorLink="@color/purple_500"
                    android:textSize="@dimen/text_view_description_question"
                    android:textAlignment="center">
                </TextView>
        </LinearLayout>
    </RelativeLayout>


    
    

</androidx.constraintlayout.widget.ConstraintLayout>